Remove NetconfUtil.checkIsMessageOk()
This method is not used anywhere except in test. Remove it to make it
clear NetconfUtil is the NormalizedNode integration thing.

Change-Id: I289ab3fc79f4d6fcde029213c5464043d1b53d1c
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>